[package]
name = "bunnystorage-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
chrono = "0.4.40"
reqwest = { version = "0.12.12", features = [ "stream" ]}
serde = { version = "1.0.218", features = ["derive"]}
serde_json = { version = "1.0.139" }
futures = "0.3.31"
serde_repr = "0.1.20"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[dependencies.uuid]
version = "1.16.0"
features = [
	"v4",
]